tests/machine/x/ocaml/dataset_where_filter.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/dataset_where_filter.ml", line 36, characters 39-41:
36 | let people = [[("name","Alice");("age",30)];[("name","Bob");("age",15)];[("name","Charlie");("age",65)];[("name","Diana");("age",45)]]
                                            ^^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let people = [[("name","Alice");("age",30)];[("name","Bob");("age",15)];[("name","Charlie");("age",65)];[("name","Diana");("age",45)]]
  37 | let adults = (let __res0 = ref [] in
  38 |   List.iter (fun person ->
